--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "test": "ng test",
     "lint": "eslint \"**/*.{js,ts}\" --quiet --fix"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && npm run lint"
+    }
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.1",
@@ -37,6 +42,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
@@ -47,6 +53,7 @@
     "ng-packagr": "^9.0.0",
     "prettier": "^2.0.5",
     "prettier-eslint": "^9.0.1",
+    "pretty-quick": "^2.0.1",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
