--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:": "ng build --prod",
     "test": "ng test",
     "lint": "eslint \"**/*.{js,ts}\" --quiet --fix"
   },
