--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
   "bracketSpacing": true,
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "printWidth": 120,
   "jsxBracketSameLine": true
