--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@angular/service-worker": "~9.1.1",
     "application": "^0.1.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
