--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/service-worker": "~9.1.1",
     "@types/google-maps": "^3.2.2",
     "application": "^0.1.4",
+    "moment": "^2.25.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
