--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "application": "^0.1.4",
     "moment": "^2.25.3",
     "rxjs": "~6.5.4",
+    "source-map-support": "^0.5.19",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.2",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular-devkit/build-ng-packagr": "~0.901.2",
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
@@ -53,7 +54,7 @@
     "husky": "^4.2.5",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "karma": "^5.0.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
